Changed canvas from using vh to % to try fixing view on iOS devices

--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ canvas{
   display:block;
   vertical-align:bottom;
   z-index:-1;
-  width:100vw;
-  height:100vh;
+  width:100%;
+  height:100%;
   position:absolute;
 }
 
@@ -206,7 +206,7 @@ h3 {
 	/* About me div */
 	/* TODO: make top and bottom spacing even between top of header and bottom of bio */
 	#aboutMe {
-		height:40%;
+		height:35%;
 		
 		/* TODO: fix height for older devices with shorter aspect ratio */
 	}
